styles/Applycard.module.css
.card {
  display: flex;
  flex-direction: column;

  border-radius: 8px;
  border-width: 1px;
  border-color: var(--border-color);
  padding: 24px;

  max-width: 850px;

  margin-top: 24px;

  gap: 24px;

  background-color: white;
}

.formContainer {
  display: flex;
  flex-direction: column;
  gap: 40px;
  margin-top: 24px;
}

.formItemGroup {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.formItemGroupTitle {
  margin-bottom: 4px;
}

.formItem {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.formLabel {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;

  min-width: 200px;
}

.uploadButtonLabel {
  display: flex;
  flex-direction: row;
  gap: 4px;

  max-width: 200px;
  height: 48px;

  align-items: center;

  padding-left: 16px;
  padding-right: 16px;

  border-color: var(--main-color);
  border-width: 1px;
  border-radius: 8px;

  cursor: pointer;
}

.uploadButton {
  display: none;
}

.fullwidth {
  width: 100%;
}

@media only screen and (max-width: 1000px) {
  .formItemGroup {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  .formItem {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    float: left;
    height: 56px;
  }
  .formLabel {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;

    min-width: 200px;
  }
}

